# Coding-adventures

./: .replit  pyproject.toml
Java/: Calculator.java
Java/BlackJack/: BlackJackUI.txt  FullBlackjack.java  g.txt
Js/Calculaor/: Calculator.js  index.html  jsconfig.json  sketch.js
Js/Tic tac toe/: sketch.js
Js/tut/: README.md  package-lock.json  package.json
Js/tut/src/: App.vue
Js/tut/src/components/: modal.vue
Python/: Procfile  Smp.py
Python/AI/: Tictactoe.py  ai.py  aitim.py  mydaeth.py  test.py
Python/Discord/: data.json  test - Copy.py  test.py
Python/HEXAPAWN/: HexaEngine.py
Python/Kinematics/: asa.py  foward .py
Python/Raycast/: Engine.py  main.py
Python/Tag/: Tag.py
Python/calculator/: calculator - Copy.py  calculator.py
Python/data/: NeuralNetwork.py  main.py
Python/hand dection/: main.py
Python/pong/: pong.py  try 2 pong.py
Python/sim key/: 2 take 2 .py  clisk speed.py  dank memer.py
Python/tic tac toe/: FIRST.cs  TEngine.py  Untitled-1.py  engine.py  tictactoe.py
