[tool.poetry]
name = "repl_python3_Coding-adventures"
version = "0.1.0"
description = ""
authors = ["KRYPTIX <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
keyboard = "^0.13.5"
pyFirmata = "^1.1.0"
pygame = "^2.1.2"
pynput = "^1.7.6"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
